[package]
name = "qywx-dumper"
version = "0.1.2"
edition = "2021"
description = "Fetch contacts from enterprise WeChat instantly."

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
anyhow = "1.0"

lazy_static = "1.4"

itertools = "0.10"

log = "0.4"
pretty_env_logger = "0.4"

clap = { version = "4.0", features = ["derive", "cargo", "env"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap-verbosity-flag = "2.0"

tokio-stream = "0.1"

[dependencies.reqwest]
version = "0.11"
features = ["json", "brotli", "gzip", "deflate", "socks"]

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["rt-multi-thread", "macros"]
